@@ -38,6 +38,39 @@ module Sequel
       end
       
       alias_method :do, :execute
+      
+      def tables
+        from(:tab).select(:tname).filter(:tabtype => 'TABLE').map do |r|
+          r[:tname].downcase.to_sym
+        end
+      end
+
+      def table_exists?(name)
+        from(:tab).filter(:tname => name.to_s.upcase, :tabtype => 'TABLE').count > 0
+      end
+
+      def transaction
+        @pool.hold do |conn|
+          @transactions ||= []
+          if @transactions.include? Thread.current
+            return yield(conn)
+          end
+          
+          conn.autocommit = false
+          begin
+            @transactions << Thread.current
+            result = yield(conn)
+            conn.commit
+            result
+          rescue => e
+            conn.rollback
+            raise e unless SequelRollbackError === e
+          ensure
+            conn.autocommit = true
+            @transactions.delete(Thread.current)
+          end
+        end
+      end
     end
     
     class Dataset < Sequel::Dataset
@@ -54,10 +87,10 @@ module Sequel
         @db.synchronize do
           cursor = @db.execute sql
           begin
-            @columns = cursor.get_col_names.map {|c| c.to_sym}
+            @columns = cursor.get_col_names.map {|c| c.downcase.to_sym}
             while r = cursor.fetch
               row = {}
-              r.each_with_index {|v, i| row[@columns[i]] = v}
+              r.each_with_index {|v, i| row[columns[i]] = v unless columns[i] == :raw_rnum_}
               yield row
             end
           ensure
@@ -71,9 +104,11 @@ module Sequel
         @db.synchronize do
           cursor = @db.execute sql
           begin
-            @columns = cursor.get_col_names.map {|c| c.to_sym}
+            @columns = cursor.get_col_names.map {|c| c.downcase.to_sym}
+            raw_rnum_index = columns.index(:raw_rnum_)
             while r = cursor.fetch
-              r.keys = columns
+              r.delete_at(raw_rnum_index) if raw_rnum_index
+              r.keys =  columns.delete_if{|x| x == :raw_rnum_}
               yield r
             end
           ensure
@@ -94,6 +129,70 @@ module Sequel
       def delete(opts = nil)
         @db.do delete_sql(opts)
       end
+
+
+      # Formats a SELECT statement using the given options and the dataset
+      # options.
+      def select_sql(opts = nil)
+        opts = opts ? @opts.merge(opts) : @opts
+
+        if sql = opts[:sql]
+          return sql
+        end
+
+        columns = opts[:select]
+        select_columns = columns ? column_list(columns) : WILDCARD
+        sql = opts[:distinct] ? \
+        "SELECT DISTINCT #{select_columns}" : \
+        "SELECT #{select_columns}"
+        
+        if opts[:from]
+          sql << " FROM #{source_list(opts[:from])}"
+        end
+        
+        if join = opts[:join]
+          sql << join
+        end
+
+        if where = opts[:where]
+          sql << " WHERE #{where}"
+        end
+
+        if group = opts[:group]
+          sql << " GROUP BY #{column_list(group)}"
+        end
+
+        if having = opts[:having]
+          sql << " HAVING #{having}"
+        end
+
+        if union = opts[:union]
+          sql << (opts[:union_all] ? \
+            " UNION ALL #{union.sql}" : " UNION #{union.sql}")
+        elsif intersect = opts[:intersect]
+          sql << (opts[:intersect_all] ? \
+            " INTERSECT ALL #{intersect.sql}" : " INTERSECT #{intersect.sql}")
+        elsif except = opts[:except]
+          sql << (opts[:except_all] ? \
+            " EXCEPT ALL #{except.sql}" : " EXCEPT #{except.sql}")
+        end
+
+        if order = opts[:order]
+          sql << " ORDER BY #{column_list(order)}"
+        end
+
+        if limit = opts[:limit]
+          if (offset = opts[:offset]) && (offset > 0)
+            sql = "SELECT * FROM (SELECT raw_sql_.*, ROWNUM raw_rnum_ FROM(#{sql}) raw_sql_ WHERE ROWNUM <= #{limit + offset}) WHERE raw_rnum_ > #{offset}"
+          else
+            sql = "SELECT * FROM (#{sql}) WHERE ROWNUM <= #{limit}"
+          end
+        end
+
+        sql
+      end
+
+      alias sql select_sql
     end
   end
 end
